Thu Feb 07 01:48:06 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* XML/examples/SAXPrint/main.cpp: Added a new test to try the new
	  StrCharStream and switch to use ACE_Get_Opt to support more
	  robust command line arguments.

	* XML/common/StrCharStream.h:
	* XML/common/StrCharStream.cpp: Added new CharStream class that
	  take a null-terminated ACEXML_Char string as an input source.

	* XML/common/FileCharStream.h: Removed unnecessary inclusion of
	  "ace/streams.h".

	* XML/common/Makefile:
	* XML/common/Makefile.bor:
	* XML/common/XML_Common.dsp: Added StrCharStream.*.

Tue Feb  5 11:59:00 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* tests/TP_Reactor_Test.cpp (disable_signal): Eliminate unused
	  arguments warning on Win32 platforms.

Mon Feb  4 16:22:20 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/OS.h: Include <new> instead of <new.h> if
	  ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB is defined.

Mon Feb  4 19:58:03 2002  Boris Kolpackov  <bosk@ipmce.ru>

	* ace/Log_Msg.cpp:

	  Fixed minor bug in what's just commited before.
	  Thanks to Craig Rodrigues <crodrigu@bbn.com>
	  for pointing it out.

Mon Feb  4 14:11:14 2002  Boris Kolpackov  <bosk@ipmce.ru>

	* ace/Log_Msg.h:
	* ace/Log_Msg.cpp:

	  Added ability to install custom backend which is a
	  per-process entity as opposite to callback which is
	  a per-thread not-inheritable entity.

Sun Feb  3 17:59:36 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ace/config-sunos5.5.h (ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION):

          Explicitly defined the above macro as this is needed for SunOS
          gcc to work. This was inside a __SUNPRO_CC #ifdef. I missed that
          in my previous change. This should fix the builds under SunOS
          gcc.

Sun Feb  3 18:32:29 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* tests/TP_Reactor_Test.cpp: Use size_t instead of long
	  and int for index_ and sessions_ in order to eliminate
	  more compiler warnings.
