@@ -1,3 +1,4 @@
+#if defined (ACE_HAS_LEGACY_SERVICE_CONFIG)
 #define ACE_YY_NO_UNPUT
 /* A lexical scanner generated by flex */
 
@@ -846,7 +847,7 @@ case 19:
 ACE_YY_RULE_SETUP
 {
                         // Check for first type of string, i.e.,
-                        // "double quotes" delimited.  
+                        // "double quotes" delimited.
                         ACE_TCHAR *s = ACE_OS::strrchr (ace_yytext, '"');
                         if (s == 0)
                           // Check for second type of string, i.e.,
@@ -887,7 +888,7 @@ case 24:
 ACE_YY_RULE_SETUP
 {
                          ACE_ERROR ((LM_ERROR,
-                                     ACE_LIB_TEXT ("unknown character = (%d"), 
+                                     ACE_LIB_TEXT ("unknown character = (%d"),
                                                    *ace_yytext));
                         if (ACE_OS::ace_isprint (*ace_yytext))
                           ACE_ERROR ((LM_ERROR, ACE_LIB_TEXT ("|%c"), *ace_yytext));
@@ -1839,3 +1840,4 @@ ace_yy_pop_buffer (ace_yy_buffer_state *buffer)
 
   ace_yy_switch_to_buffer (buffer);
 }
+#endif /* ACE_HAS_LEGACY_SERVICE_CONFIG */
